fixed issues on recipe content page, made header z-index higher, and fixed recipe card pointer cursor issue

--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -7,6 +7,7 @@
 	flex-flow: row nowrap;
 	align-items: center;
 	justify-content: space-between;
+	z-index: 2;
 
 	@media screen and (max-width: 700px) {
 		padding: 0.25rem 0.5rem 0.25rem 0.5rem;
