--- a/src/sass/page-specific/_recipe-filter-search.scss
+++ b/src/sass/page-specific/_recipe-filter-search.scss
@@ -192,6 +192,7 @@
 				justify-content: space-between;
 				border: 2px solid #A9A9A9;
 				border-radius: 30px 30px 0px 0px;
+				cursor: pointer;
 
 				.recipes-otd-img-cont {
 					display: flex;
