--- a/src/sass/page-specific/_search-results.scss
+++ b/src/sass/page-specific/_search-results.scss
@@ -36,6 +36,7 @@
 				border-radius: 30px 30px 0px 0px;
 				border: 2px solid #A9A9A9;
 				overflow: hidden;
+				cursor: pointer;
 
 				.recipes-otd-img-cont {
 					display: flex;
